bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: value =< is not a member of Int
  if (hour>6 && hour=<20) {
                    ^